--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test jest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,7 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "babel-jest": "^29.7.0",
+    "gh-pages": "^6.1.1",
     "jest": "^27.5.1",
     "react-test-renderer": "^18.3.1"
   }
